--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "axios-retry": "^3.1.2",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "flashheart": "^3.2.1",
     "morgan": "^1.9.1",
     "redis": "^2.8.0"
   },
